--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ chardet==3.0.4
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1.1
+django-cors-headers==3.5.0
 django-countries==6.1.3
 django-crispy-forms==1.9.2
 django-debug-toolbar==3.1.1
